--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
 github:
-  zip_url: https://drive.google.com/drive/u/2/folders/1nAWZD0dGXM3CjhwrN9iyVxo4g6L8rPhg
+  zip_url: https://drive.google.com/drive/folders/12tpfN9lBsoIvHJl_tHRz_C3pbJoEE33X?usp=sharing
